WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
160208
Occasional crash in WebCore::RenderVTTCue::initializeLayoutParameters
https://bugs.webkit.org/show_bug.cgi?id=160208
Summary
Occasional crash in WebCore::RenderVTTCue::initializeLayoutParameters
Eric Carlson
Reported
2016-07-26 13:35:57 PDT
From crash logs, it seems that RenderVTTCue::firstChild is sometimes NULL when it should not be. Debug builds ASSERT when this is true, but release builds should not crash.
Attachments
Proposed patch.
(1.24 KB, patch)
2016-07-26 13:43 PDT
,
Eric Carlson
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Eric Carlson
Comment 1
2016-07-26 13:36:31 PDT
rdar://problem/21090897
Eric Carlson
Comment 2
2016-07-26 13:43:43 PDT
Created
attachment 284625
[details]
Proposed patch.
Darin Adler
Comment 3
2016-07-26 14:15:13 PDT
Comment on
attachment 284625
[details]
Proposed patch. OK
WebKit Commit Bot
Comment 4
2016-07-26 14:36:31 PDT
Comment on
attachment 284625
[details]
Proposed patch. Clearing flags on attachment: 284625 Committed
r203737
: <
http://trac.webkit.org/changeset/203737
>
WebKit Commit Bot
Comment 5
2016-07-26 14:36:35 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug