Occasional crash in WebCore::RenderVTTCue::initializeLayoutParameters https://bugs.webkit.org/show_bug.cgi?id=160208

Reviewed by Darin Adler.

* rendering/RenderVTTCue.cpp:
(WebCore::RenderVTTCue::initializeLayoutParameters): Return when firstChild is NULL so a
release build will not crash.


Canonical link: https://commits.webkit.org/178366@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@203737 268f45cc-cd09-0410-ab3c-d52691b4dbfc